--- a/kernel/report.Rmd
+++ b/kernel/report.Rmd
@@ -124,7 +124,7 @@ The four kernels produced a holistic picture of the possibilities of kernel base
 Cross-validation showed that the KRR kernel which best suits our data is the RBF kernel with $\lambda = 0.001$ and $\gamma = 0.05$ ($MSE_{CV} = 0.0005$, $MSPE = 0.003$; for best model comparison by kernel, see Table 2; for testset predictions of best model, see Figure \@ref(fig:qq-plot)). The cross-validation searched for the best model among 230 different models with the parameter $\lambda$ as one of 0.001, 0.005, 0.01, 0.05, 0.1, 0.2, 0.5, 1, 2, 5, 10, 20, 50 and 100. Furthermore, we defined:
 \begin{itemize}
 \item For RBF kernel models: $\gamma$ as one of 0.01, 0.05, 0.1, 0.25, 0.5, 0.75, 1, 2, 4, 5, and 10
-\item For polynomial and nonhomoegenous kernel models: degrees as one of 1, 2, 3, 4, 5, 6, 7, 8, 9, and 10. 
+\item For polynomial and nonhomoegenous kernel models: degree as one of 1, 2, 3, 4, 5, 6, 7, 8, 9, and 10
 \end{itemize}
 
 | Kernel type                                  | CV-MSPE |  Test-MSPE |  $\lambda$  | Hyperparameter
